Change to startCard in Field + small various changes
Now startCard in Field is not final, there an initializer
Field.playCardSide() checks also if startCard is handled correctly
Field.countResources() now is Field.getResourcesInField()
Deleted CardSide, CardSideObjective, CardSideObjectiveNoEffect
Bug correction in PointsSet
Tests repaired after code changes